# maple-proxy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  docker-compose.yml  flake.nix  justfile  rustfmt.toml  setup-hooks.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  docker-publish.yml  release.yml  security.yml
examples/: library_usage.rs
openclaw-plugin/: README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
openclaw-plugin/lib/: downloader.test.ts  downloader.ts  platform.ts  process.ts
openclaw-plugin/skills/maple-proxy-skill/: SKILL.md
src/: config.rs  lib.rs  main.rs  proxy.rs
tests/: health_test.rs
