[package]
name = "maple-proxy"
version = "0.1.0"
edition = "2021"
authors = ["OpenSecret"]
description = "Lightweight OpenAI-compatible proxy server for Maple/OpenSecret TEE infrastructure"
license = "MIT"

[lib]
name = "maple_proxy"
path = "src/lib.rs"

[[bin]]
name = "maple-proxy"
path = "src/main.rs"

[dependencies]
# OpenSecret SDK 
opensecret = "0.2.0"

# Web server
axum = { version = "0.8.4", features = ["http2", "macros"] }
tokio = { version = "1.47", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for proxying
reqwest = { version = "0.12", features = ["json", "stream"] }

# Streaming support
eventsource-stream = "0.2"
futures = "0.3"
async-stream = "0.3"
bytes = "1.8"

# Configuration and environment
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"

# HTTP types and headers
http = "1.0"
hyper = { version = "1.0", features = ["full"] }

[dev-dependencies]
axum-test = "18.0.1"
tokio-test = "0.4"
tower = { version = "0.5.2", features = ["util"] }
serde_json = "1.0"